# databricks-extract-load-dbt

./: .gitignore  README.md  azure-pipelines.yml  dbt_project.yml  profiles.yml  pull-hourly-data.py  pyproject.toml  requirements.txt
config/: cluster.json  job-template.json
models/gold/: gold.yml  movement.sql  movement_report.sql  schema.yml
models/silver/: dim_line.sql  dim_vehicle.sql  movement.sql  schema.yml
notebooks/: load-movement-data.py  pull-hourly-data.ipynb  pull-hourly-data.py
scripts/: main.sh  prepare.py  pull-hourly-data.ipynb  pull-hourly-data.ipynb.py  pull-hourly-data.py  run.sh  start.sh  stop.sh
