[tool.poetry]
name = "databricks-extract-load-dbt"
version = "0.1.0"
description = "This is example of databricks."
authors = ["Abhishek Kumar <abhishek_ku@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.10"
dbt-core = "^1.2.0"
dbt-spark = "^1.2.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
